--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ gapi.analytics.ready(function() {
    */
   gapi.analytics.auth.authorize({
     container: 'auth',
-    clientid: '623325626209-j1jm9d78ge0v4uf8b9cor31qsirungrq.apps.googleusercontent.com',
+    clientid: 'AIzaSyAyuhVDvDR3BKo0CUBIptroe0rmKbMm3Go.apps.googleusercontent.com',
   });
 
   /**
