New Oauth Client ID

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ gapi.analytics.ready(function() {
    */
   gapi.analytics.auth.authorize({
     container: 'auth',
-    clientid: 'AIzaSyAyuhVDvDR3BKo0CUBIptroe0rmKbMm3Go.apps.googleusercontent.com',
+    clientid: '461167506611-tuf4ehqrimq3qegqi0fqgd7f9p1721mv.apps.googleusercontent.com',
   });
 
   /**
