--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
       </h1>
     </div>
   </section>
+  
+    <section>
+    <div class="Component Viewpicker" id="viewpicker"></div>
+    <div class="Component Realtime" id="realtime">
+      <h1 class="Realtime-content">
+        Active Users:
+        <span class="Realtime-value" id="active-users"></span>
+      </h1>
+    </div>
+  </section>
+
 
   <section class="Component Chart Chart--chartjs">
     <h3 class="Chart-title">This Week vs Last Week (Sessions)</h3>
